# scantailor-advanced

./: .gitignore  CMakeLists.txt  README.md  build-ios.sh  build-macos.sh  generate-icons.sh  version.h.in
cmake/: ios.toolchain.cmake
ios/: Info.plist
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos/: scantailor.entitlements
src/app/: CMakeLists.txt  MainWindow.cpp  OutOfMemoryDialog.cpp  ProjectFilesDialog.cpp
src/app/ios/: IosDirectoryPicker.h  IosDirectoryPicker.mm
src/core/: CMakeLists.txt  DefaultParams.cpp
src/core/filters/deskew/: ImageView.cpp  ImageView.h  OptionsWidget.cpp  OptionsWidget.h  OptionsWidget.ui  Task.cpp
src/core/filters/output/: CMakeLists.txt
src/core/tests/: TestDeskewParams.cpp
src/foundation/: CMakeLists.txt
src/resources/: appicon.icns
